--- a/module-3/04_Flexbox/tutorial-student/index.html
+++ b/module-3/04_Flexbox/tutorial-student/index.html
@@ -10,6 +10,17 @@
 
 <body>
   <div class="container">
+    <header id="page-header">
+      <img src="news_logo.png" />
+      <input type="search" placeholder="Search..." id="search" />
+      <nav>
+        <ul>
+          <li><a href="#">Our Mission</a></li>
+          <li><a href="#">Our Team</a></li>
+          <li><a href="#">Login</a></li>
+        </ul>
+      </nav>
+    </header>
     <section id="left-panel">
       <nav>
         <menu>
@@ -141,6 +152,38 @@
       </article>
     </aside>
   </div>
+  <aside id="weather">
+    <article>
+      <header>Weather</header>
+      <section>
+        <p>
+          <span class="day">Today:</span>
+          <span class="forecast">Sunny ☀️</span>
+          <span class="temperature">High: 67 | Low: 56</span>
+        </p>
+        <p>
+          <span class="day">Tomorrow:</span>
+          <span class="forecast">Cloudy ⛅</span>
+          <span class="temperature">High: 54 | Low: 49</span>
+        </p>
+        <p>
+          <span class="day">Saturday:</span>
+          <span class="forecast">Sunny ☀️</span>
+          <span class="temperature">High: 78 | Low: 62</span>
+        </p>
+        <p>
+          <span class="day">Sunday:</span>
+          <span class="forecast">Sunny ☀️</span>
+          <span class="temperature">High: 73 | Low: 58</span>
+        </p>
+        <p>
+          <span class="day">Monday:</span>
+          <span class="forecast">Thunderstorms ⛈️</span>
+          <span class="temperature">High: 56 | Low: 49</span>
+        </p>
+      </section>
+    </article>
+  </aside>
 </body>
 
 </html>
