--- a/module-3/08_DOM/exercise-student/shopping-list/index.html
+++ b/module-3/08_DOM/exercise-student/shopping-list/index.html
@@ -13,9 +13,7 @@
 
     <div class="shopping-list">
         <h1 id="title"></h1>
-        <ul id="groceries">
-            <!-- add groceries here -->
-        </ul>
+        <ul id="groceries"></ul>
     </div>
 
     <a href="#" class="btn">
